corrected fix of overlay not visible

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -430,44 +430,6 @@ footer a:hover {
 
 /* ================================== PROJECT STYLES ============================= */
 
-
-
-.fancy-l {
-  animation: fancy 0.9s ease-out;
-  will-change: transform, opacity;
-}
-
-@keyframes fancy {
-  0% {
-    opacity: 0;
-    transform: translateX(-30rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0rem);
-  }
-}
-
-
-.fancy-l {
-  animation: fancy 0.9s ease-out;
-  will-change: transform, opacity;
-}
-
-@keyframes fancy {
-  0% {
-    opacity: 0;
-    transform: translateX(-300rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0rem);
-  }
-}
-
-
 .fancy-l {
   animation: fancy-l 0.9s ease-out;
   will-change: transform, opacity;
